fix wrapping of code on mobile
not perfect - it'd be best if we inserted some zero-width spaces at
better breaking points (like before `.` or `(`, etc.), but that would
probably mean getting into coderay so this will have to do for now

--- a/templates/default/fulldoc/html/css/common.css
+++ b/templates/default/fulldoc/html/css/common.css
@@ -206,3 +206,8 @@ img {
         color: #ccc;
     }
 }
+
+pre.code {
+    white-space: pre-wrap;
+    overflow-wrap: anywhere;
+}
